--- a/lbl2vec.ipynb
+++ b/lbl2vec.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90ef97f0",
+   "cell_type": "markdown",
+   "id": "100f53b8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "1 + 43"
+    "Lbl2vec doesn't work very well.\n",
+    "- The model doesn't work when keywords aren't in the vocabulary:\n",
+    "WARNING - The following keywords from the 'keywords_list' are unknown to the Doc2Vec model and therefore not used to train the model: stroke\n",
+    "- The keywords can't be phrases like \"Intraparenchymal hemorrhage\""
    ]
   },
   {
@@ -75,7 +76,7 @@
     "\t[\"Malignancy\"],\n",
     "]\n",
     "\n",
-    "keywords_small = keywords[:3]\n",
+    "keywords_small = [[\"infection\"], [\"edema\"]]\n",
     "keywords_small"
    ]
   },
@@ -86,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('rads_dispo_lim_2023_02_23.csv')\n",
+    "df = pd.read_csv('~/rads_dispo_lim_2023_02_23.csv')\n",
     "df = df.reset_index()\n",
     "df.head()"
    ]
@@ -98,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_small = df[:10]"
+    "df_small = df[:1000]"
    ]
   },
   {
@@ -115,7 +116,75 @@
     "\treturn doc2vec.TaggedDocument(input_str.split(), tags=[str(index)])\n",
     "\n",
     "\n",
-    "df[\"doc\"] = df_small.progress_apply(lambda x: str_to_document(x['index'], x['Impression']), axis=1)"
+    "df_small[\"doc\"] = df_small.progress_apply(lambda x: str_to_document(x['index'], x['Impression']), axis=1)\n",
+    "df_small.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f24e7d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# d2v_model = doc2vec.Doc2Vec(documents=df_small[\"doc\"], vector_size=10, window=2, min_count=2, workers=4, dbow_words=1, dm=0)\n",
+    "# d2v_model.build_vocab(df_small[\"doc\"])\n",
+    "# print(f\"Word appeared {d2v_model.wv.get_vecattr('interval', 'count')} times in the training corpus.\")\n",
+    "# d2v_model.train(df_small[\"doc\"], total_examples=d2v_model.corpus_count, epochs=d2v_model.epochs)\n",
+    "# vector = d2v_model.infer_vector(['only', 'you', 'can', 'prevent', 'forest', 'fires'])\n",
+    "# vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ad2f0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2v_model.dv.most_similar(positive=[vector])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10db8dfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"rib\" in d2v_model.wv.index_to_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1970080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2v_model = doc2vec.Doc2Vec(documents=df_small[\"doc\"], vector_size=10, window=2, min_count=2, workers=4, dbow_words=1, dm=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8326d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"pneumonia\" in d2v_model.wv.index_to_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41004fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2v_model = Lbl2Vec(keywords_list=[[\"pneumonia\"], [\"edema\"]], doc2vec_model=d2v_model)\n",
+    "l2v_model.fit()\n",
+    "l2v_model.predict_model_docs()"
    ]
   },
   {
@@ -125,16 +194,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# d2v_model = doc2vec.Doc2Vec(documents=df[\"doc\"].tolist(), vector_size=5, window=2, min_count=1, workers=4, dbow_words=1, dm=0)\n",
-    "# l2v_model = Lbl2Vec(keywords_list=keywords_small, doc2vec_model=d2v_model)\n",
     "l2v_model = Lbl2Vec(\n",
     "\tkeywords_list=keywords_small,\n",
-    "\ttagged_documents=df[\"doc\"].tolist(),\n",
-    "\tmin_count=1)\n",
+    "\ttagged_documents=df_small[\"doc\"],\n",
+    "\tmin_count=2,\n",
+    "    \n",
+    ")\n",
     "\n",
     "l2v_model.fit()\n",
     "l2v_model.predict_model_docs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a45a18ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
