--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cdba7c2f",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "4  1.  Redemonstrated fracture of the femoral hea...    Admit to Inpatient  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,11 +205,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cd987926",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urgent</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>not urgent</th>\n",
+       "      <th>tablet</th>\n",
+       "      <th>Impression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [urgent, phone, computer, not urgent, tablet, Impression]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# labels = [\"Fracture\", \"Edema\", \"Cardiomegaly\", \"Pneumonia\", \"Atelectasis\", \"Pneumothorax\", \"Pleural Effusion\"]\n",
+    "labels = ['urgent', 'phone', 'computer', 'not urgent', 'tablet']\n",
+    "schema = {col_name: pd.Series(dtype=\"float64\") for col_name in labels}\n",
+    "schema[\"Impression\"] = pd.Series(dtype=\"object\")\n",
+    "rdf = pd.DataFrame(schema)\n",
+    "rdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6279ee88",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results = [{'sequence': 'I have a problem with my iphone that needs to be resolved asap!',\n",
+    " 'labels': ['urgent', 'phone', 'computer', 'not urgent', 'tablet'],\n",
+    " 'scores': [0.9987171292304993,\n",
+    "  0.9945850372314453,\n",
+    "  0.18990309536457062,\n",
+    "  0.0007674154476262629,\n",
+    "  0.00038260864675976336]}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b4cd79f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7866/3809587057.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  rdf = rdf.append(row, ignore_index=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urgent</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>not urgent</th>\n",
+       "      <th>tablet</th>\n",
+       "      <th>Impression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.998717</td>\n",
+       "      <td>0.994585</td>\n",
+       "      <td>0.189903</td>\n",
+       "      <td>0.000767</td>\n",
+       "      <td>0.000383</td>\n",
+       "      <td>I have a problem with my iphone that needs to ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     urgent     phone  computer  not urgent    tablet  \\\n",
+       "0  0.998717  0.994585  0.189903    0.000767  0.000383   \n",
+       "\n",
+       "                                          Impression  \n",
+       "0  I have a problem with my iphone that needs to ...  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to_pandas(results_list):\n",
+    "#     labels = [\"Fracture\", \"Edema\", \"Cardiomegaly\", \"Pneumonia\", \"Atelectasis\", \"Pneumothorax\", \"Pleural Effusion\"]\n",
+    "    labels = ['urgent', 'phone', 'computer', 'not urgent', 'tablet']\n",
+    "    schema = {col_name: pd.Series(dtype=\"float64\") for col_name in labels}\n",
+    "    schema[\"Impression\"] = pd.Series(dtype=\"object\")\n",
+    "    rdf = pd.DataFrame(schema)\n",
+    "    for result in results:\n",
+    "        row = {label: score for label, score in zip(result[\"labels\"], result[\"scores\"])}\n",
+    "        row[\"Impression\"] = result[\"sequence\"]\n",
+    "        rdf = rdf.append(row, ignore_index=True)\n",
+    "    #     rdf = pd.concat([rdf, pd.DataFrame(row)])\n",
+    "    return rdf\n",
+    "\n",
+    "pred_df = to_pandas(results)\n",
+    "pred_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fe3fac09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>urgent</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>computer</th>\n",
+       "      <th>not urgent</th>\n",
+       "      <th>tablet</th>\n",
+       "      <th>Impression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.998717</td>\n",
+       "      <td>0.994585</td>\n",
+       "      <td>0.189903</td>\n",
+       "      <td>0.000767</td>\n",
+       "      <td>0.000383</td>\n",
+       "      <td>I have a problem with my iphone that needs to ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     urgent     phone  computer  not urgent    tablet  \\\n",
+       "0  0.998717  0.994585  0.189903    0.000767  0.000383   \n",
+       "\n",
+       "                                          Impression  \n",
+       "0  I have a problem with my iphone that needs to ...  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threshold = 0.9\n",
+    "col_name = \"phone\"\n",
+    "pred_df[pred_df[col_name] > threshold]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e923711c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def naive_bayes(y_pred, y_true, col_name):\n",
+    "    X = y_pred[[col_name]]\n",
+    "    y = y_true.mask(y_true != 1, 0)\n",
+    "\n",
+    "    nb = GaussianNB()\n",
+    "    nb.fit(X, y)\n",
+    "    # training accuracy\n",
+    "    print(nb.score(X, y))\n",
+    "    print(metrics.classification_report(y, nb.predict(X)))\n",
+    "    return nb\n",
+    "\n",
+    "nb_frac = naive_bayes(pred_df, chexbert_df, col_name)"
+   ]
   }
  ],
  "metadata": {
