--- a/lbl2vec_transformer.ipynb
+++ b/lbl2vec_transformer.ipynb
@@ -2856,7 +2856,7 @@
    "source": [
     "y_true = np.array(result_chexbert_multiple)\n",
     "y_pred = np.array(result_l2v_multiple)\n",
-    "#y_true = y_true + y_pred\n",
+    "#y_true = y_true  + y_pred\n",
     "#substitute 2 for 1 and the rest for 0\n",
     "#y_true[y_true != 2] = 0\n",
     "#y_true[y_true == 2] = 1\n",
@@ -3779,7 +3779,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "6dd2d880",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
