split_data.ipynb

--- a/notebooks/split_data.ipynb
+++ b/notebooks/split_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "2f66b0ac",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "975eaa97",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "4  1.  Redemonstrated fracture of the femoral hea...    Admit to Inpatient  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "321c82a3",
+   "execution_count": 3,
+   "id": "0a2be4e5",
    "metadata": {},
    "outputs": [
     {
@@ -420,19 +420,19 @@
        "[146149 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chexbert_results = pd.read_csv('/root/Project-CS224N-ED-Disposition/CheXbert-Labeler/labeled_reports_output.csv')\n",
+    "chexbert_results = pd.read_csv('/root/chexbert_labels.csv')\n",
     "chexbert_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "abd06e16",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "[146149 rows x 15 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "8b826c3a",
    "metadata": {},
    "outputs": [],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "3d3a0d26",
    "metadata": {},
    "outputs": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "bac1e4eb",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "c44fba90",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "393c15c4",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
        "[14615 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "09de6f61",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1282,7 @@
        "[14615 rows x 15 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "9a7b41ab",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "4a832315",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "89bc63a0",
    "metadata": {},
    "outputs": [],
