--- a/notebooks/zero_shot_classification.ipynb
+++ b/notebooks/zero_shot_classification.ipynb
@@ -5,20 +5,7 @@
    "execution_count": 1,
    "id": "516edd4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-06 06:57:56.297016: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-06 06:57:56.413370: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-03-06 06:57:56.985680: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib64:/opt/amazon/openmpi/lib64:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/lib:/opt/amazon/efa/lib64:/opt/amazon/openmpi/lib64:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/lib:\n",
-      "2023-03-06 06:57:56.985793: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /opt/amazon/efa/lib64:/opt/amazon/openmpi/lib64:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/lib:/opt/amazon/efa/lib64:/opt/amazon/openmpi/lib64:/usr/local/cuda/efa/lib:/usr/local/cuda/lib:/usr/local/cuda:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/lib:/usr/lib:/lib:\n",
-      "2023-03-06 06:57:56.985801: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import pipeline\n",
     "import numpy as np\n",
@@ -32,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "224814a9",
    "metadata": {},
    "outputs": [],
@@ -48,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "96c8c3bc",
    "metadata": {},
    "outputs": [],
@@ -58,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "1beeca36",
    "metadata": {},
    "outputs": [
@@ -67,14 +54,14 @@
       "text/plain": [
        "{'sequence': 'I have a problem with my iphone that needs to be resolved asap!',\n",
        " 'labels': ['urgent', 'phone', 'computer', 'not urgent', 'tablet'],\n",
-       " 'scores': [0.9987170696258545,\n",
-       "  0.9945850372314453,\n",
-       "  0.189903125166893,\n",
-       "  0.0007674109074287117,\n",
-       "  0.00038260716246441007]}"
+       " 'scores': [0.9987171292304993,\n",
+       "  0.9945850968360901,\n",
+       "  0.18989995121955872,\n",
+       "  0.0007674121879972517,\n",
+       "  0.0003826080064754933]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "4864406c",
    "metadata": {},
    "outputs": [],
@@ -100,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "66dea0f3",
    "metadata": {},
    "outputs": [
@@ -108,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset csv (/root/.cache/huggingface/datasets/csv/default-50c8ec55ede3b71e/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+      "Found cached dataset csv (/root/.cache/huggingface/datasets/csv/default-dcb44e19e0ca611f/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
      ]
     },
     {
@@ -120,7 +107,7 @@
        "})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,40 +124,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "4fba5c3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Unnamed: 0': [80343, 66645, 76374],\n",
-       " 'Report Impression': ['1.  No displaced fracture or traumatic malalignment of the left shoulder, humerus, elbow, forearm. Note: Radiographs are insensitive, and some fractures can be occult. If there is clinical concern for occult fracture, MRI has the highest sensitivity. Although CT may be helpful, nondisplaced fractures can be missed by CT exam.',\n",
-       "  '1.  Apparent retrocardiac opacity favored to be secondary to breast tissue.',\n",
-       "  '1.  No acute cardiopulmonary disease.'],\n",
-       " 'Enlarged Cardiomediastinum': [None, None, None],\n",
-       " 'Cardiomegaly': [None, None, None],\n",
-       " 'Lung Opacity': [None, 1.0, None],\n",
-       " 'Lung Lesion': [None, None, None],\n",
-       " 'Edema': [None, None, None],\n",
-       " 'Consolidation': [None, None, None],\n",
-       " 'Pneumonia': [None, None, None],\n",
-       " 'Atelectasis': [None, None, None],\n",
-       " 'Pneumothorax': [None, None, None],\n",
-       " 'Pleural Effusion': [None, None, None],\n",
-       " 'Pleural Other': [None, None, None],\n",
-       " 'Fracture': [-1.0, None, None],\n",
-       " 'Support Devices': [None, None, None],\n",
-       " 'No Finding': [None, None, 1.0]}"
+       "{'Unnamed: 0': 80343,\n",
+       " 'Report Impression': '1.  No displaced fracture or traumatic malalignment of the left shoulder, humerus, elbow, forearm. Note: Radiographs are insensitive, and some fractures can be occult. If there is clinical concern for occult fracture, MRI has the highest sensitivity. Although CT may be helpful, nondisplaced fractures can be missed by CT exam.',\n",
+       " 'Enlarged Cardiomediastinum': None,\n",
+       " 'Cardiomegaly': None,\n",
+       " 'Lung Opacity': None,\n",
+       " 'Lung Lesion': None,\n",
+       " 'Edema': None,\n",
+       " 'Consolidation': None,\n",
+       " 'Pneumonia': None,\n",
+       " 'Atelectasis': None,\n",
+       " 'Pneumothorax': None,\n",
+       " 'Pleural Effusion': None,\n",
+       " 'Pleural Other': None,\n",
+       " 'Fracture': -1.0,\n",
+       " 'Support Devices': None,\n",
+       " 'No Finding': None}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[\"val\"][:3]"
+    "dataset[0]"
    ]
   },
   {
