--- a/notebooks/zero_shot_results.ipynb
+++ b/notebooks/zero_shot_results.ipynb
@@ -266,6 +266,7 @@
    "source": [
     "\"\"\"\n",
     "compare against chexbert, assuming chexbert is truth\n",
+    "TODO: what is the optimal threshold?\n",
     "\"\"\"\n",
     "threshold=0.75\n",
     "def to_pandas(results_list):\n",
