--- a/notebooks/bart_evaluate_real.ipynb
+++ b/notebooks/bart_evaluate_real.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3c5994cc",
+   "metadata": {},
+   "source": [
+    "Do not use this! The working evaluation for the fine-tuned BART model is implemented in scripts/zero_shot_all_labels_fine_tune.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ac2baf12",
